--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </nav>
     <div class="wrapper">
         <div class="head">
-            <img src="images/title.png">
+            <div class="bg">
+                <img src="images/title-xl.png">
+                <img src="images/title-sm.png">
+            </div>
         </div>
         <div id="accordion">
             <div class="faq">
@@ -33,13 +36,18 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq01" class="collapse" aria-labelledby="faq01" data-parent="#accordion">
+                <div id="faq01" class="collapse show" aria-labelledby="faq01" data-parent="#accordion">
                     <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-5">
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
                                 <p>開啟 <span class="text-green">beanfun!</span>，點選左上角 <span class="text-green">遊戲圖示</span> 即可進入 beanfun! 遊戲。</p>
                             </div>
-                            <div class="col-12 col-sm-7"><img src="images/faq/phoneimg-01.png"></div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-01-xl.png">
+                                    <img src="images/faq/phoneimg-01-sm.png">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -51,30 +59,39 @@
                         <i class="icon-right-open-1"></i>
                     </div>
                 </div>
-                <div id="faq02" class="collapse" aria-labelledby="faq02" data-parent="#accordion">
-                    <div class="bg-white py-0 py-md-5">
+                <div id="faq02" class="collapse show" aria-labelledby="faq02" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <p>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</p>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 1.</h1>
+                                <p>點選左上方側邊 <span class="text-green">選單按鈕</span></p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-02-xl.png">
+                                    <img src="images/faq/phoneimg-02-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-02.png"></div>
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <p>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</p>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-5">
+                                <h1>STEP 2.</h1>
+                                <p>再點擊 <span class="text-green">安全防護</span></p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-03-xl.png">
+                                    <img src="images/faq/phoneimg-03-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-03.png"></div>
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <p>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</p>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 3.</h1>
+                                <p>即可看到 <span class="text-green">調整防護等級</span> 和 <span class="text-green">解除綁定</span> 的地方喔~</p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-04-xl.png">
+                                    <img src="images/faq/phoneimg-04-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-04.png"></div>
                         </div>
                     </div>
                 </div>
@@ -86,30 +103,40 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq03" class="collapse" aria-labelledby="faq03" data-parent="#accordion">
-                    <div class="bg-white py-0 py-md-5">
+                <div id="faq03" class="collapse show" aria-labelledby="faq03" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 1.</h1>
+                                <p>點選左上方側邊 <span class="text-green">選單按鈕</span></p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-02-xl.png">
+                                    <img src="images/faq/phoneimg-02-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-02.png"></div>
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 2.</h1>
+                                <p>點選點數帳號右方 <span class="text-green">下拉按鈕</span></p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-05-xl.png">
+                                    <img src="images/faq/phoneimg-05-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-05.png"></div>
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 3.</h1>
+                                <p>點選 <span class="text-green">新增其他</span> 即可新增綁定帳號</p>
+                                <p>※ 最多能綁定3組帳號唷</p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-06-xl.png">
+                                    <img src="images/faq/phoneimg-06-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-06.png"></div>
                         </div>
                     </div>
                 </div>
@@ -121,13 +148,11 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq04" class="collapse" aria-labelledby="faq04" data-parent="#accordion">
-                    <div class="bg-white py-0 py-md-5">
+                <div id="faq04" class="collapse show" aria-labelledby="faq04" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12">
-                                <div class="content">
-                                    <h2>使用跟原本一樣的手機號碼&信箱驗證後，即可找回舊綁定資料。</h2>
-                                </div>
+                            <div class="col-12 offset-0 col-md-10 offset-md-1 py-4">
+                                <p>使用跟原本一樣的手機號碼&信箱驗證後，即可找回舊綁定資料。</p>
                             </div>
                         </div>
                     </div>
@@ -140,13 +165,11 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq05" class="collapse" aria-labelledby="faq05" data-parent="#accordion">
-                    <div class="bg-white py-0 py-md-5">
+                <div id="faq05" class="collapse show" aria-labelledby="faq05" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12">
-                                <div class="content">
-                                    <h2>請參考 <a href="#" class="font-weight-bold" target="brank">零用金說明</a> </h2>
-                                </div>
+                            <div class="col-12 offset-0 col-md-10 offset-md-1 py-4">
+                                <p>請參考 <a href="#" target="brank">零用金說明</a> </p>
                             </div>
                         </div>
                     </div>
@@ -159,16 +182,18 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq06" class="collapse" aria-labelledby="faq06" data-parent="#accordion">
-                    <div class="bg-white py-0 py-md-5">
+                <div id="faq06" class="collapse show" aria-labelledby="faq06" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <p>於App右上方可以看到餘額，零用金可使用於相關通路上進行消費折抵。</p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-07-xl.png">
+                                    <img src="images/faq/phoneimg-07-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-07.png"></div>
                         </div>
                     </div>
                 </div>
@@ -180,16 +205,18 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq07" class="collapse" aria-labelledby="faq07" data-parent="#accordion">
-                    <div class="bg-white py-0 py-md-5">
+                <div id="faq07" class="collapse show" aria-labelledby="faq07" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <p>點選圖示的 <span class="text-green">通知設定</span> 即可進行調整喔</p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-08-xl.png">
+                                    <img src="images/faq/phoneimg-08-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-08.png"></div>
                         </div>
                     </div>
                 </div>
@@ -201,16 +228,18 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq08" class="collapse" aria-labelledby="faq08" data-parent="#accordion">
-                    <div class="bg-white  py-0 py-md-5">
+                <div id="faq08" class="collapse show" aria-labelledby="faq08" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <p>點選圖示的 <span class="text-green">儲值中心</span> 即可進行點數儲值與購買</p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-09-xl.png">
+                                    <img src="images/faq/phoneimg-09-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-09.png"></div>
                         </div>
                     </div>
                 </div>
@@ -222,25 +251,31 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq09" class="collapse" aria-labelledby="faq09" data-parent="#accordion">
-                    <div class="py-3 bg-white">
+                <div id="faq09" class="collapse show" aria-labelledby="faq09" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 1.</h1>
+                                <p>點選左上方側邊 <span class="text-green">選單按鈕</span></p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-02-xl.png">
+                                    <img src="images/faq/phoneimg-02-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-02.png"></div>
                         </div>
                         <div class="row no-gutters">
-                            <div class="col-12 col-sm-4">
-                                <div class="content">
-                                    <h1>STEP 1.</h1>
-                                    <h2>開啟beanfun!，點選左上角 遊戲圖示即可進入beanfun! 遊戲。</h2>
+                            <div class="col-12 offset-0 col-md-3 offset-md-1 pt-4">
+                                <h1>STEP 2.</h1>
+                                <p>在點選下方 <span class="text-green">查詢點數紀錄</span></p>
+                            </div>
+                            <div class="col-12 col-md-8">
+                                <div class="bg">
+                                    <img src="images/faq/phoneimg-10-xl.png">
+                                    <img src="images/faq/phoneimg-10-sm.png">
                                 </div>
                             </div>
-                            <div class="col-12 col-sm-8"><img src="images/faq/phoneimg-10.png"></div>
                         </div>
                     </div>
                 </div>
@@ -252,14 +287,12 @@
                         <span><i class="icon-right-open-1"></i></span>
                     </div>
                 </div>
-                <div id="faq10" class="collapse" aria-labelledby="faq10" data-parent="#accordion">
-                    <div class="py-3 bg-white">
+                <div id="faq10" class="collapse show" aria-labelledby="faq10" data-parent="#accordion">
+                    <div class="ans-content">
                         <div class="row no-gutters">
-                            <div class="col-12">
-                                <div class="content">
-                                    <p>建議您可以來信至 客服信箱 或來電客服中心尋求協助喔～</p>
-                                    <p>客服電話：02-2192-6100 - 請按1</p>
-                                </div>
+                            <div class="col-12 offset-0 col-sm-10 offset-sm-1 py-4">
+                                <p>建議您可以來信至 <a href="#" target="brank">客服信箱</a> 或來電客服中心尋求協助喔～</p>
+                                <p>客服電話：<span class="text-green">02-2192-6100-請按1</span></p>
                             </div>
                         </div>
                     </div>
