--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq02" aria-expanded="false" aria-controls="faq02">如何調整防護等級/解除綁定？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq02" aria-expanded="false" aria-controls="faq02">
+                        <div class="title">如何調整防護等級/解除綁定？</div>
+                    </div>
                     <div id="faq02" class="collapse" aria-labelledby="faq02" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -91,7 +93,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq03" aria-expanded="false" aria-controls="faq03">如何新增綁定帳號？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq03" aria-expanded="false" aria-controls="faq03">
+                        <div class="title">如何新增綁定帳號？</div>
+                    </div>
                     <div id="faq03" class="collapse" aria-labelledby="faq03" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -131,7 +135,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq04" aria-expanded="false" aria-controls="faq04">我是重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq04" aria-expanded="false" aria-controls="faq04">
+                        <div class="title">我是重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
+                    </div>
                     <div id="faq04" class="collapse" aria-labelledby="faq04" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -143,7 +149,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq05" aria-expanded="false" aria-controls="faq05">什麼是零用金？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq05" aria-expanded="false" aria-controls="faq05">
+                        <div class="title">什麼是零用金？</div>
+                    </div>
                     <div id="faq05" class="collapse" aria-labelledby="faq05" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -155,7 +163,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq06" aria-expanded="false" aria-controls="faq06">取得零用金後要到哪邊查看呢？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq06" aria-expanded="false" aria-controls="faq06">
+                        <div class="title">取得零用金後要到哪邊查看呢？</div>
+                    </div>
                     <div id="faq06" class="collapse" aria-labelledby="faq06" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -173,7 +183,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq07" aria-expanded="false" aria-controls="faq07">我要怎麼設定推播提醒？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq07" aria-expanded="false" aria-controls="faq07">
+                        <div class="title">我要怎麼設定推播提醒？</div>
+                    </div>
                     <div id="faq07" class="collapse" aria-labelledby="faq07" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -191,7 +203,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq08" aria-expanded="false" aria-controls="faq08">儲值中心在哪裡？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq08" aria-expanded="false" aria-controls="faq08">
+                        <div class="title">儲值中心在哪裡？</div>
+                    </div>
                     <div id="faq08" class="collapse" aria-labelledby="faq08" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -209,7 +223,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq09" aria-expanded="false" aria-controls="faq09">樂豆點紀錄查詢在哪裡？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq09" aria-expanded="false" aria-controls="faq09">
+                        <div class="title">樂豆點紀錄查詢在哪裡？</div>
+                    </div>
                     <div id="faq09" class="collapse" aria-labelledby="faq09" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
@@ -240,7 +256,9 @@
                     </div>
                 </li>
                 <li class="faq">
-                    <div class="question collapsed" data-toggle="collapse" data-target="#faq10" aria-expanded="false" aria-controls="faq10">我的問題沒有在上面我要怎麼辦？</div>
+                    <div class="question collapsed" data-toggle="collapse" data-target="#faq10" aria-expanded="false" aria-controls="faq10">
+                        <div class="title">我的問題沒有在上面我要怎麼辦？</div>
+                    </div>
                     <div id="faq10" class="collapse" aria-labelledby="faq10" data-parent="#accordion">
                         <div class="ans-content">
                             <div class="row no-gutters">
