--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>beanfun!遊戲 - 常見問題FAQ</title>
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="vendor/style/fontello.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
