--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-md-10 offset-md-1 py-4">
-                                    <p>請參考 <a href="#" target="brank">零用金說明</a> </p>
+                                    <p>請參考 <a href="https://tw.hicdn.beanfun.com/beanfun/beanfun/bfevent/beanfun-bonus/index.html" target="brank">零用金說明</a> </p>
                                 </div>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                         <div class="ans-content">
                             <div class="row no-gutters">
                                 <div class="col-12 offset-0 col-sm-10 offset-sm-1 py-4">
-                                    <p>建議您可以來信至 <a href="#" target="brank">客服信箱</a> 或來電客服中心尋求協助喔～</p>
+                                    <p>建議您可以來信至 <a href="https://service.antspw.com/MSGBoardUI/PCForm" target="brank">客服信箱</a> 或來電客服中心尋求協助喔～</p>
                                     <p>客服電話：<span class="text-green">02-2192-6100-請按1</span></p>
                                 </div>
                             </div>
@@ -272,11 +272,23 @@
                 </li>
             </ol>
         </div>
-        <div id="link" class="my-5 p-3">
+        <div id="link" class="my-1 my-sm-3 my-md-5 p-3">
             <div class="row">
-                <div class="col-6 col-md-4"><img src="images/apple.png"></div>
-                <div class="col-6 col-md-4"><img src="images/android.png"></div>
-                <div class="col-4 fb"><img src="images/fb.png"></div>
+                <div class="col-6 col-md-4">
+                    <div class="bg">
+                        <img src="images/apple-xl.png">
+                        <img src="images/apple-sm.png">
+                    </div>                    
+                </div>
+                <div class="col-6 col-md-4">
+                    <div class="bg">
+                        <img src="images/android-xl.png">
+                        <img src="images/android-sm.png">
+                    </div>                    
+                </div>
+                <div class="col-4 fb">
+                    <a href="https://www.facebook.com/beanfunGAMES" target="brank"><img src="images/fb.png"></a>
+                </div>
             </div>
         </div>
     </div>
