--- a/index.html
+++ b/index.html
@@ -272,18 +272,18 @@
                 </li>
             </ol>
         </div>
-        <div id="link" class="my-1 my-sm-3 my-md-5 p-3">
+        <div id="link" class="my-1 my-sm-3 my-md-4 p-3">
             <div class="row">
                 <div class="col-6 col-md-4">
                     <div class="bg">
                         <img src="images/apple-xl.png">
-                        <img src="images/apple-sm.png">
+                        <a href="https://itunes.apple.com/us/app/beanfun%21-app/id1108282446?l=zh&ls=1&mt=8"><img src="images/apple-sm.png"></a>
                     </div>                    
                 </div>
                 <div class="col-6 col-md-4">
                     <div class="bg">
                         <img src="images/android-xl.png">
-                        <img src="images/android-sm.png">
+                        <a href="https://play.google.com/store/apps/details?id=com.gamania.beanfun"><img src="images/android-sm.png"></a>
                     </div>                    
                 </div>
                 <div class="col-4 fb">
