--- a/index.html
+++ b/index.html
@@ -275,14 +275,18 @@
         <div id="link" class="my-1 my-sm-3 my-md-4 p-3">
             <div class="row">
                 <div class="col-6 col-md-4">
-                    <div class="bg">
+                    <div class="apple-xl">
                         <img src="images/apple-xl.png">
-                        <a href="https://itunes.apple.com/us/app/beanfun%21-app/id1108282446?l=zh&ls=1&mt=8"><img src="images/apple-sm.png"></a>
+                    </div>
+                    <div class="apple-sm">
+                        <a href="https://play.google.com/store/apps/details?id=com.gamania.beanfun"><img src="images/apple-sm.png"></a>
                     </div>                    
                 </div>
                 <div class="col-6 col-md-4">
-                    <div class="bg">
+                    <div class="android-xl">
                         <img src="images/android-xl.png">
+                    </div>
+                    <div class="android-sm">
                         <a href="https://play.google.com/store/apps/details?id=com.gamania.beanfun"><img src="images/android-sm.png"></a>
                     </div>                    
                 </div>
