--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <img src="images/apple-xl.png">
                     </div>
                     <div class="apple-sm">
-                        <a href="https://play.google.com/store/apps/details?id=com.gamania.beanfun"><img src="images/apple-sm.png"></a>
+                        <a href="https://itunes.apple.com/us/app/beanfun%21-app/id1108282446?l=zh&ls=1&mt=8"><img src="images/apple-sm.png"></a>
                     </div>                    
                 </div>
                 <div class="col-6 col-md-4">
