--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 <body id="main">
     <nav class="navbar bg-green">
         <a class="navbar-brand" href="#">
-            <i class="icon-home"></i><img src="images/beanfun-logo.png">
+            <img src="images/beanfun-logo.png">
         </a>
     </nav>
     <div class="wrapper">
         <div class="head">
             <div class="bg">
-                <img src="images/title-xl.png">
-                <img src="images/title-sm.png">
+                <img src="images/title-01-xl.png">
+                <img src="images/title-01-sm.png">
             </div>
         </div>
         <div id="accordion">
             <ol>
-                <li class="faq">
+                <li id="q01" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq01" aria-expanded="false" aria-controls="faq01">
-                        <div class="title">我要怎麼進入"beanfun! 遊戲"的介面？</div>
+                        <div class="title">要怎麼進入"beanfun! 遊戲"的介面？</div>
                     </div>
                     <div id="faq01" class="collapse" aria-labelledby="faq01" data-parent="#accordion">
                         <div class="ans-content">
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q02" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq02" aria-expanded="false" aria-controls="faq02">
                         <div class="title">如何調整防護等級/解除綁定？</div>
                     </div>
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q03"class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq03" aria-expanded="false" aria-controls="faq03">
                         <div class="title">如何新增綁定帳號？</div>
                     </div>
@@ -134,9 +134,9 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q04" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq04" aria-expanded="false" aria-controls="faq04">
-                        <div class="title">我是重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
+                        <div class="title">重新安裝的會員，要怎麼找回原本綁定的點數帳號？</div>
                     </div>
                     <div id="faq04" class="collapse" aria-labelledby="faq04" data-parent="#accordion">
                         <div class="ans-content">
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q05" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq05" aria-expanded="false" aria-controls="faq05">
                         <div class="title">什麼是零用金？</div>
                     </div>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q06" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq06" aria-expanded="false" aria-controls="faq06">
                         <div class="title">取得零用金後要到哪邊查看呢？</div>
                     </div>
@@ -182,9 +182,9 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q07" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq07" aria-expanded="false" aria-controls="faq07">
-                        <div class="title">我要怎麼設定推播提醒？</div>
+                        <div class="title">怎麼設定推播提醒？</div>
                     </div>
                     <div id="faq07" class="collapse" aria-labelledby="faq07" data-parent="#accordion">
                         <div class="ans-content">
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q08" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq08" aria-expanded="false" aria-controls="faq08">
                         <div class="title">儲值中心在哪裡？</div>
                     </div>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q09" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq09" aria-expanded="false" aria-controls="faq09">
                         <div class="title">樂豆點紀錄查詢在哪裡？</div>
                     </div>
@@ -255,9 +255,9 @@
                         </div>
                     </div>
                 </li>
-                <li class="faq">
+                <li id="q10" id="q10" class="faq">
                     <div class="question collapsed" data-toggle="collapse" data-target="#faq10" aria-expanded="false" aria-controls="faq10">
-                        <div class="title">我的問題沒有在上面我要怎麼辦？</div>
+                        <div class="title">問題沒有在上面我要怎麼辦？</div>
                     </div>
                     <div id="faq10" class="collapse" aria-labelledby="faq10" data-parent="#accordion">
                         <div class="ans-content">
